tests/parser_cases/valid/module_without_begin.ob0
MODULE Main;
VAR x: INTEGER;
END Main.
