tests/parser_cases/invalid/bad_assign.ob0
(* INVALID: uses '=' in assignment statement instead of ':=' *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x = 1;
END Main.
